[package]
name = "cli_home"
version = "0.1.0"
description = "the home of a shell"
authors = ["Mendgart444 <raffael.hauschildt@gmx.ch>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
